--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="sweetalert2.all.min.js"></script>
-    <title>Vite + React</title>
+    <title>Tu medio auto</title>
   </head>
   <body>
     <div id="root"></div>
