--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/medio_auto.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="sweetalert2.all.min.js"></script>
     <title>Tu medio auto</title>
